# specdex

./: .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.specdex/: STATE.md
docs/design/: README.md
docs/screenshots/: README.md
e2e/: flow-a-first-run.spec.ts  flow-b-ingest-create.spec.ts  flow-c-receive-po.spec.ts  flow-d-quick-lookup.spec.ts  flow-e-share-kb.spec.ts  flow-f-edit-schema.spec.ts  flow-g-backup-restore.spec.ts  screenshots.spec.ts  smoke.spec.ts
e2e/fixtures/: helpers.ts  tauri.ts
examples/kbs/: boeing-specs.json  internal-part-numbers.json  material-codes.json
examples/pdfs/: README.md
installers/: README.md  about.toml  download-ocrs-models.sh  download-pdfium.sh
scripts/: run-e2e.sh
src/: App.test.tsx  App.tsx  main.tsx  router.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: app_data.rs  backup.rs  entry.rs  entry_validation.rs  error.rs  events.rs  identity.rs  ingest.rs  jobs.rs  kb.rs  lib.rs  parse.rs  scanner.rs  schema_migration.rs  search.rs  source_doc.rs
src-tauri/crates/core/src/db/: migrations.rs  mod.rs
src-tauri/crates/core/src/db/migrations/: 0001_initial.sql
src-tauri/crates/core/src/models/: entry.rs  event.rs  identity.rs  ids.rs  job.rs  kb.rs  mod.rs  scan.rs  schema.rs  source_document.rs
src-tauri/crates/core/src/scanner/: cache.rs  index.rs  resolver.rs
src-tauri/crates/core/src/search/: entries_index.rs  source_docs_index.rs  types.rs
src-tauri/crates/parsers/: Cargo.toml
src-tauri/crates/parsers/src/: error.rs  lib.rs  mock.rs  ocr.rs  parsed_document.rs  parser_trait.rs  pdfium.rs
src-tauri/crates/parsers/tests/fixtures/: README.md
src-tauri/crates/tauri_adapter/: Cargo.toml  build.rs
src-tauri/crates/tauri_adapter/src/: bindings_export.rs  main.rs
src-tauri/crates/tauri_adapter/src/commands/: mod.rs
src-tauri/crates/tauri_adapter/tests/: binary_runs.rs
src-tauri/src/: bindings_export.rs  event_forwarder.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  backup.rs  entry.rs  identity.rs  ingest.rs  kb.rs  mod.rs  scanner.rs  search.rs  settings.rs  source_doc.rs
src/components/: AppSidebar.tsx  CommandPalette.tsx  ErrorBoundary.tsx  FileDropZone.tsx  KbColorPicker.tsx  KbCreateDialog.test.tsx  KbCreateDialog.tsx  Layout.tsx  ThemeToggle.tsx
src/components/EntryForm/: AliasList.tsx  EntryForm.placeholder.tsx  EntryForm.tsx  SourceBackrefPanel.tsx  index.ts
src/components/EntryForm/fields/: DateField.tsx  Field.tsx  ImageAttachmentField.tsx  NumberField.tsx  SelectField.tsx  TextField.tsx  TextMultilineField.tsx  UrlField.tsx
src/components/IngestQueue/: FileRow.tsx  IngestQueuePanel.tsx  PreIngestDialog.tsx  index.ts
src/components/PdfViewer/: EntryHoverCard.tsx  ExtractPopover.tsx  FindBar.tsx  FindHighlightLayer.tsx  HighlightLayer.tsx  NewEntryPanel.tsx  PdfPage.tsx  PdfPageView.tsx  PdfToolbar.tsx  PdfViewer.tsx  ScopeDropdown.tsx  TextSelectionLayer.tsx  find-nav.test.ts  find-nav.ts  fit.test.ts  fit.ts  index.ts  types.ts  usePdf.ts
src/components/SchemaEditor/: FieldEditor.tsx  MigrationDiff.tsx
src/components/shared/: ConfirmModal.test.tsx  ConfirmModal.tsx  EmptyState.test.tsx  EmptyState.tsx  KbBadge.test.tsx  KbBadge.tsx  Toast.test.tsx  Toast.tsx  index.ts
src/components/ui/: badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  popover.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  sonner.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/dev/: DesignShowcase.tsx  templates.test.ts  templates.ts
src/hooks/: useDebounce.test.tsx  useDebounce.ts  useFirstRunRedirect.test.tsx  useFirstRunRedirect.ts  useSystemTheme.test.tsx  useSystemTheme.ts
src/lib/: bindings.ts  events.ts  kb-colors.ts  schema-diff.test.ts  schema-diff.ts  schema-form.ts  store.test.ts  store.ts  tauri.test.ts  tauri.ts  theme.ts
src/routes/: DocumentViewer.tsx  Documents.test.tsx  Documents.tsx  KbDetail.tsx  KbList.tsx  Onboarding.test.tsx  Onboarding.tsx  SchemaEditor.tsx  Search.test.tsx  Search.tsx  Settings.test.tsx  Settings.tsx
src/styles/: globals.css
