[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parsers",
    "crates/tauri_adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bsherifi/specdex"
authors = ["bsherifi <betimsh99@gmail.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Specdex pragmatic exemptions (revisit if they ever hide a real bug):
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
# Faster incremental builds during the 7 weekends of development.
opt-level = 0
debug = 1
