[package]
name = "specdex_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Specdex core: business logic (KB, entries, ingest, scanner, search, backup)."

[lib]
name = "specdex_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true, features = ["chrono", "uuid", "derive", "serde_json"] }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid", "serde_json"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
