[package]
name = "specdex_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Specdex core: business logic (KB, entries, ingest, scanner, search, backup)."

[lib]
name = "specdex_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true, features = ["chrono", "uuid", "derive", "serde_json"] }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid", "serde_json"] }
# Jobs runner needs rt (spawn) + time on top of `sync`. We avoid the `macros`
# feature (tests build their own runtime) to keep tokio-macros out of the tree.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time"] }
sha2 = "0.10"
aho-corasick = "1.1"
dashmap = "6.1"
tantivy = "0.22"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
