[package]
name = "tauri_adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Specdex Tauri adapter binary: thin command layer over specdex_core."

[[bin]]
name = "specdex"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
specdex_core = { path = "../core" }
specdex_parsers = { path = "../parsers", features = ["real-parsers"] }
tauri = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
specta-typescript = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
